# NamoraC2

./: Cargo.toml  README.md  TODO
agent/: Cargo.toml
agent/src/: config.rs  init.rs  main.rs  run.rs  self_delete.rs  updater.rs
agent/src/loaders/: mod.rs  novaldr.rs  peldr.rs  snapldr.rs
agent/src/namoracore/: fluctuated_ntapi.rs  mod.rs  novacore.rs  ntapi.rs  snapcore.rs
agent/src/stager/: mod.rs
agent/src/sys/: cmd.rs  mod.rs  powershell.rs
client/: Cargo.toml
client/src/: config.rs  error.rs  main.rs
client/src/api/: create_jobs.rs  get_agent.rs  get_job_result.rs  list_agents.rs  mod.rs
client/src/cli/: agents.rs  exec.rs  identity.rs  mod.rs
common/: Cargo.toml
common/src/: api.rs  crypto.rs
server/: Cargo.toml  server_config.env
server/src/: config.rs  db.rs  entities.rs  main.rs
server/src/api/: error.rs  state.rs
server/src/api/routes/: index.rs  mod.rs
server/src/repository/: agents.rs  jobs.rs
server/src/service/: agents.rs  jobs.rs  mod.rs
