[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clroxide = { version = "1.1.1", default-features = true }
dinvoke_rs = "0.2.0"
memoffset = "0.9.1"
obfstr = "0.4.4"
rand = "0.8.5"
shelter = "0.1.0"
unwinder = "0.1.3"
widestring = "1.1.0"

winapi = { version = "0.3.9", features =["ntdef", "ntstatus", "minwindef",
    "winnt", "memoryapi", "processthreadsapi", "handleapi", "synchapi",
    "winbase","errhandlingapi", "debugapi", "processsnapshot", "winerror", "handleapi",]  }

ntapi = { version =  "0.4.1", features =[]}
anyhow = "1.0.93"

rust-veh-syscalls = { path = "RustVEHSyscalls" }
common = { path = "../common" }
Snapshotting_rs = { git = "https://github.com/Teach2Breach/Snapshotting_rs" }


ureq = { version = "2.10.1", features = ["tls", "json"] }
log = "0.4.22"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = "2.0.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
#blake2 = "0.10.6"
zeroize = "1.8.1"
reqwest = { version = "0.12.9", features = ["blocking"]}
blake3 = "1.5.5"
lazy_static = "1.5.0"


#[features]
#default = [ "serde" ]


[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_Diagnostics_Debug",
]
