[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
#blake2 = "0.10.6"
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.21", features = ["cargo"]}
colored = "2.1.0"

common = { path = "../common" }
#antianalysis = { path = "../../antianalysis"}

ed25519-dalek = "2.1.1"
prettytable-rs = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"]}
x25519-dalek = "2.0.1"
zeroize = "1.8.1"
