[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono ={ version =  "0.4.38", features = ["serde"]}
serde = { version = "1.0.204", features = ["derive"]}

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]