[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common" }

anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204" }

sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls",
    "postgres", "migrate", "chrono", "time", "uuid" ] }

thiserror = "1.0.63"

tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"]}
warp = { version = "0.3.7", default-features = false }
